--- a/app/src/main/res/layout/signup.xml
+++ b/app/src/main/res/layout/signup.xml
@@ -214,6 +214,12 @@
             tools:layout_editor_absoluteY="638dp"
             android:layout_marginTop="25dp"
             />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/textView_main_result"
+            >
+        </TextView>
     </LinearLayout>
 
 
